@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="version">3.0.0-rc3</string> 
+    <string name="version">3.0.0-dev3</string> 
 </resources>
